clean up process

--- a/inventory/templates/inventory.html
+++ b/inventory/templates/inventory.html
@@ -7,21 +7,12 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
         <title>Document</title>
     </head>
-    <body style='height: 100%; body: 100%;'>
-        {% comment %} Navbar {% endcomment %}
-        {% comment %} container - inventory {% endcomment %}
-        {% comment %} footer - form-inline {% endcomment %}
-        {% comment %} <nav class='fixed-top navbar navbar-expand-lg navbar-light bg-light'>
-          <a class="navbar-brand" href="#">Home</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-        </nav> {% endcomment %}
+    <body>
 
-        <div class='container h-80'>
+        <div class='container h-100'>
             <div class="row h-100">
 
-                <div class='col'>
+                <div class='col text-center'>
                     <table class="table table-hover">
                         <thead class='fixed'>
                             <tr>
@@ -60,7 +51,6 @@
             </div>
         </div>
 
-        {% comment %} Footer - Add Items Component {% endcomment %}
         <footer class="footer fixed-bottom bg-light" style='height: 15vh;'>
         
             <div class='row h-100 align-items-center'>
