--- a/inventory/templates/inventory.html
+++ b/inventory/templates/inventory.html
@@ -12,6 +12,15 @@
         <div class='container h-100'>
             <div class="row h-100">
 
+                {% if prompt != None %}
+                <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                    <strong>{{ prompt }}</strong>
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                {% endif %}
+
                 <div class='col text-center'>
                     <table class="table table-hover">
                         <thead class='fixed'>
@@ -26,9 +35,9 @@
                             </tr>
                         </thead>
                         <tbody>
-                            {% for item in items %}
+                            {% for item in inventory %}
                             <tr>
-                                <th scope="col">{{ item.item.item_id }}</th>
+                                <th scope="col">{{ item.item_id }}</th>
                                 <td>{{ item.item_get_date }}</td>
                                 <td>{{ item.item.item_name }}</td>
                                 <td>{{ item.item.item_from }}</td>
@@ -38,11 +47,40 @@
                                     <form method="post">
                                         {% csrf_token %}
                                         <button type="submit" class="btn btn-success" name='sellItem' value={{ item.item.item_id }}>Sell Item</button>
-                                        <button type="submit" class="btn btn-warning" name='editItem' value={{ item.item.item_id }}>Edit</button>
-                                        <button type="submit" class="btn btn-danger" name='deleteItem' value={{ item.item.item_id }}>Delete</button>
+                                       
+
+                                        <button type="button" class="btn btn-warning" name='editItem' value={{ item.item.item_id }} data-toggle='modal' data-target='#editItem'>Edit</button>
+
+
+                                        <button type="button" class="btn btn-danger" name='deleteItem' value={{ item.item.item_id }} data-toggle="modal" data-target="#confirmDelete">Delete</button>
+
+                                        <div class="modal fade" id="confirmDelete" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+                                            <div class="modal-dialog" role="document">
+                                                <div class="modal-content">
+                                                    <div class="modal-header">
+                                                        <h5 class="modal-title" id="exampleModalLongTitle">Delete Item</h5>
+                                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                        <span aria-hidden="true">&times;</span>
+                                                        </button>
+                                                    </div>
+                                                    <div class="modal-body">
+                                                        <h2>Are you sure you want to delete {{ item.item.item_name }} from the Inventory?</h2>
+                                                    </div>
+                                                    <div class="modal-footer">
+                                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                                                        <form method='post'>
+                                                            {% csrf_token %}
+                                                            <button type="submit" class="btn btn-danger" name='deleteItem' value={{ item.item.item_id }}>Delete Item</button>
+                                                        </form>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+
                                     </form>
                                 </td>
                             </tr>
+
                             {% endfor %}
                         </tbody>
                     </table>
