--- a/inventory/templates/inventory.html
+++ b/inventory/templates/inventory.html
@@ -1,72 +1,47 @@
 {% extends "base.html" %}
 
 {% block content %}
+    <div class='container h-100'>
+        <div class="row h-100">
+            <div class='col text-center'>
+                <table class="table table-hover">
+                    <thead class='fixed'>
+                        <tr>
+                            <th scope="col">Item No</th>
+                            <th scope="col">Item Acquired Date</th>
+                            <th scope="col">Item Name</th>
+                            <th scope="col">Item From</th>
+                            <th scope="col">Item Get Price</th>
+                            <th scope="col">Item Sell Price</th>
+                            <th scope="col">Actions</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for item in inventory %}
+                        <tr>
+                            <th scope="col">{{ item.item_id }}</th>
+                            <td>{{ item.item_get_date }}</td>
+                            <td>{{ item.item.item_name }}</td>
+                            <td>{{ item.item.item_from }}</td>
+                            <td>{{ item.item.item_get_price }}</td>
+                            <td>{{ item.item.item_sell_price }}</td>
+                        
+                            <td>
+                                <form method="post">
+                                    {% csrf_token %}
+                                    <button type="submit" class="btn btn-success" name='sellItem' value={{ item.item.item_id }}>Sell Item</button>
+                                    <button type="button" class="btn btn-warning" name='editItem' value={{ item.item.item_id }} data-toggle='modal' data-target='#editItem'>Edit</button>
+                                    {% include 'inventory-add-button.html' with item=item %}
+                                </form>
+                            </td>
+                        </tr>
 
-<div class='container h-100'>
-    <div class="row h-100">
-        <div class='col text-center'>
-            <table class="table table-hover">
-                <thead class='fixed'>
-                    <tr>
-                        <th scope="col">Item No</th>
-                        <th scope="col">Item Acquired Date</th>
-                        <th scope="col">Item Name</th>
-                        <th scope="col">Item From</th>
-                        <th scope="col">Item Get Price</th>
-                        <th scope="col">Item Sell Price</th>
-                        <th scope="col">Actions</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for item in inventory %}
-                    <tr>
-                        <th scope="col">{{ item.item_id }}</th>
-                        <td>{{ item.item_get_date }}</td>
-                        <td>{{ item.item.item_name }}</td>
-                        <td>{{ item.item.item_from }}</td>
-                        <td>{{ item.item.item_get_price }}</td>
-                        <td>{{ item.item.item_sell_price }}</td>
-                    
-                        <td>
-                            <form method="post">
-                                {% csrf_token %}
-                                <button type="submit" class="btn btn-success" name='sellItem' value={{ item.item.item_id }}>Sell Item</button>
-                                <button type="button" class="btn btn-warning" name='editItem' value={{ item.item.item_id }} data-toggle='modal' data-target='#editItem'>Edit</button>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
 
-                                <button type="button" class="btn btn-danger" name='deleteItem' value={{ item.item.item_id }} data-toggle="modal" data-target="#confirmDelete">Delete</button>
-
-                                <div class="modal fade" id="confirmDelete" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
-                                    <div class="modal-dialog" role="document">
-                                        <div class="modal-content">
-                                            <div class="modal-header">
-                                                <h5 class="modal-title" id="exampleModalLongTitle">Delete Item</h5>
-                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                                <span aria-hidden="true">&times;</span>
-                                                </button>
-                                            </div>
-                                            <div class="modal-body">
-                                                <h2>Are you sure you want to delete {{ item.item.item_name }} from the Inventory?</h2>
-                                            </div>
-                                            <div class="modal-footer">
-                                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                                                <form method='post'>
-                                                    {% csrf_token %}
-                                                    <button type="submit" class="btn btn-danger" name='deleteItem' value={{ item.item.item_id }}>Delete Item</button>
-                                                </form>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </form>
-                        </td>
-                    </tr>
-
-                    {% endfor %}
-                </tbody>
-            </table>
         </div>
-
     </div>
-</div>
 
 {% endblock content %}
