--- a/inventory/templates/base.html
+++ b/inventory/templates/base.html
@@ -8,6 +8,7 @@
         <title>Document</title>
     </head>
     <body>
+        {% include 'navbar.html' %}
         {% block content %}{% endblock content %}
 
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
