--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -3,7 +3,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <ul class="navbar-nav">
         <li class="nav-item">
-            <a class="nav-link" href="/inventory">Inventory</a>
+            <a class="nav-link" href={% url 'inventory' %}>Inventory</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/sales">Sales</a>
