replaced hardcoded links

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -6,7 +6,7 @@
             <a class="nav-link" href={% url 'inventory' %}>Inventory</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/sales">Sales</a>
+            <a class="nav-link" href={% url 'sales' %}>Sales</a>
         </li>
         
     </ul>
