cleaned up sell item form and navbar

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
         <title>{% block title %}TVS Dashboard{% endblock title%}</title>
     </head>
-    <body>
+    <body style='padding-top: 70px;'>
         {% include 'navbar.html' %}
 
         <div class='container h-100'>
