--- a/templates/inventory/_inventory_delete.html
+++ b/templates/inventory/_inventory_delete.html
@@ -1,4 +1,6 @@
-<button type="button" class="btn btn-danger" name='deleteItem' value={{ items.item.id }} data-toggle="modal" data-target="#confirmDelete">Delete</button>
+<div class='col'>
+    <button type="button" class="btn btn-block btn-danger" name='deleteItem' value={{ items.item.id }} data-toggle="modal" data-target="#confirmDelete">Delete</button>
+</div>
 
 <div class="modal fade" id="confirmDelete" tabindex="-1" role="dialog" aria-labelledby="modalTitle" aria-hidden="true">
     <div class="modal-dialog" role="document">
