--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,7 +1,7 @@
 {% block navbar %}
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <ul class="navbar-nav">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <ul class="navbar-nav mr-auto">
         <li class="nav-item">
             <a class="nav-link" href={% url 'inventory' %}>Inventory</a>
         </li>
