--- a/templates/sales/sales.html
+++ b/templates/sales/sales.html
@@ -6,69 +6,12 @@
                 <canvas id="myChart"></canvas>
             </div>
             <div class='col'>
-                <canvas id="myChart1"></canvas>
+                add more charts here
             </div>
         </div>
 
-<script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+{% include 'sales/_charts_js_cdn.html' %}
 
-<script>
-var ctx = document.getElementById('myChart').getContext('2d');
-var myChart = new Chart(ctx, {
-    type: 'bar',
-    data: {
-        labels: {{ days }},
-        datasets: [{
-            label: 'Daily Sales for the Month',
-            data: {{ sales }} ,
-            backgroundColor: [
-                'rgba(255, 99, 132, 0.2)',
-            ],
-            borderColor: [
-                'rgba(255, 99, 132, 1)',
-            ],
-            borderWidth: 1
-        }]
-    },
-    options: {
-        scales: {
-            yAxes: [{
-                ticks: {
-                    beginAtZero: true
-                }
-            }]
-        }
-    }
-});
-
-
-var ctx = document.getElementById('myChart1').getContext('2d');
-var myChart = new Chart(ctx, {
-    type: 'line',
-    data: {
-        labels: {{ days }},
-        datasets: [{
-            label: 'Daily Sales for the Month',
-            data: {{ sales }} ,
-            backgroundColor: [
-                'rgba(255, 99, 132, 0.2)',
-            ],
-            borderColor: [
-                'rgba(255, 99, 132, 1)',
-            ],
-            borderWidth: 1
-        }]
-    },
-    options: {
-        scales: {
-            yAxes: [{
-                ticks: {
-                    beginAtZero: true
-                }
-            }]
-        }
-    }
-});
-</script>
+{% include 'sales/_sales_chart.html' with days=days sales=sales%}
 
 {% endblock content %}
